syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc ReturnUserById(UserByIdRequest) returns (UserByIdReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message UserByIdRequest {
  int32 id = 1;
}

message UserByIdReply {
  string userName = 1;
  string email = 2;
  string userAddress = 3;
  string zipCode =4;
  string registeredOn = 5;
  int32 id =6;
}